--- a/about.html
+++ b/about.html
@@ -66,8 +66,8 @@ background-position: center;
     <main>
         <h1>Привет!</h1>
         <p>Я увлечён изучением английского языка, математики и созданием образовательных материалов. Работаю над проектами, которые помогают другим ученикам лучше учиться и находить интерес в учебе. Моя цель — подготовиться к поступлению в лучшие университеты мира и делиться своими знаниями с окружающими.</p>
-        <a href="http://t.me/abroadwithmera" class="contact-btn" target="_blank">
-            Связь со мной
+        <a href="" class="contact-btn" target="_blank">
+            Связь со мной @mrjnnpsr
             <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" class="icon">
         </a>
     </main>
