--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Введение</title>
+<nav>
+    <a href="index.html">Главная</a> |
+    <a href="about.html">Обо мне</a> |
+    <a href="projects.html">Мои проекты</a> |
+    <a href="blog.html">Блог</a> |
+    <a href="portfolio.html">Портфолио</a> |
+    <a href="resources.html">Ресурсы</a> |
+    <a href="contacts.html">Контакты</a>
+</nav>
     <style>
         body {
             font-family: Arial, sans-serif;
